// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DogPhoto 렌더링 테스트 DogPhotoView 렌더링 스냅샷 1`] = `
<Image
  source={
    {
      "uri": "TEST_MESSAGE",
    }
  }
  style={
    [
      undefined,
      {
        "height": 525,
        "width": 525,
      },
    ]
  }
  testID="image"
/>
`;

exports[`DogPhotoView 렌더링 테스트 1`] = `
<Image
  source={
    {
      "uri": "https://images.dog.ceo/breeds/schipperke/n02104365_5670.jpg",
    }
  }
  style={
    [
      undefined,
      {
        "height": 525,
        "width": 525,
      },
    ]
  }
  testID="image"
/>
`;
